--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -261,7 +261,7 @@ Erstelle wie unten beschrieben das Exportformat *Check24DE-Plugin* für Check24.
 | Diese Option ist für dieses Format nicht relevant.
 
 | *Artikelverfügbarkeit*
-| Option *überschreiben* aktivieren und in die Felder *1* bis *10*, die die ID der Verfügbarkeit darstellen, Artikelverfügbarkeiten eintragen. Somit werden die Artikelverfügbarkeiten, die im Menü *System » Artikel » Verfügbarkeit* eingestellt wurden, überschrieben.
+| Option *überschreiben* aktivieren und in die Felder *1* bis *10*, die die ID der Verfügbarkeit darstellen, Artikelverfügbarkeiten eintragen. Somit werden die Artikelverfügbarkeiten, die im Menü *Einrichtung » Artikel » Verfügbarkeit* eingestellt wurden, überschrieben.
 |===
 
 [#500-2]
