--- a/docs/de-de/modules/maerkte/pages/yatego.adoc
+++ b/docs/de-de/modules/maerkte/pages/yatego.adoc
@@ -241,7 +241,7 @@ Liegt ein SSL-Zertifikat vor, müssen im Yatego-Backoffice nur noch einige Einst
 .Artikelexport weiterer Webshops
 ====
 Wird der Artikelexport für einen weiteren Mandanten (Shop) eingerichtet, sind für den Auftragsimport trotzdem die Zugangsdaten (URL mit Zertifikat und *WebToken* aus den plentymarkets API-Daten) des Hauptsystems zu speichern (WebToken = nicht *plentyToken*). +
-Den *WebToken* findest du in plentymarkets im Menü *System » Systemeinstellungen » Einstellungen » API » Daten* unter *WebToken*.
+Den *WebToken* findest du in plentymarkets im Menü *Einrichtung » Systemeinstellungen » Einstellungen » API » Daten* unter *WebToken*.
 ====
 
 [IMPORTANT]
