--- a/docs/en-gb/modules/markets/pages/check24.adoc
+++ b/docs/en-gb/modules/markets/pages/check24.adoc
@@ -261,7 +261,7 @@ Create the export format *Check24DE-Plugin* as described below. Note the followi
 | This option does not affect this format.
 
 | *Item availability*
-| Activate the *overwrite* option and enter item availabilities into the fields *1* to *10*. The fields represent the IDs of the availabilities. This overwrites the item availabilities that are saved in the menu *System » Item » Item availability*.
+| Activate the *overwrite* option and enter item availabilities into the fields *1* to *10*. The fields represent the IDs of the availabilities. This overwrites the item availabilities that are saved in the menu *Setup » Item » Item availability*.
 |===
 
 [#500-2]
