--- a/docs/en-gb/modules/markets/pages/yatego.adoc
+++ b/docs/en-gb/modules/markets/pages/yatego.adoc
@@ -241,7 +241,7 @@ If you have an SSL certificate, you have to carry out some settings in the Yateg
 .Item export for further online shops
 ====
 If the item export is set up for another client (online store), enter the access data from the main system (URL and SSL ceritifcate and *web token* from the plentymarkets API data) (WebToken = not *plentyToken*). +
-The *web token* can be found in plentymarkets in the *System » System settings » API » Data* menu in the *web token* area.
+The *web token* can be found in plentymarkets in the *Setup » System settings » API » Data* menu in the *web token* area.
 ====
 
 [IMPORTANT]
