purged all occurrences of "System" in paths from shop pages

--- a/docs/en-gb/modules/welcome/pages/quick-start-online-store-introduction.adoc
+++ b/docs/en-gb/modules/welcome/pages/quick-start-online-store-introduction.adoc
@@ -7,7 +7,7 @@ IMPORTANT: Have you already set up a warehouse and created a supplier? Not yet? 
 
 After creating your items and possibly setting up an interface to eBay in the previous chapters, we will now incorporate various payment methods in your online store as well as how to change its design. plentymarkets provides these functionalities, as well as others, via plugins.
 
-There are no plugins installed on your system by default. Go to *System » Assistants* and complete the *Integrations Assistant* to install some basic extensions.
+There are no plugins installed on your system by default. Go to *Setup » Assistants* and complete the *Integrations Assistant* to install some basic extensions.
 
 For the purposes of this quick start guide, we will use plentyShop LTS, the payment methods PayPal and cash in advance, as well as DHL as shipping provider. If you do not want to use some of them, skip the respective chapters of the quick start guide.
 
