--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-webshop-einleitung.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-webshop-einleitung.adoc
@@ -6,7 +6,7 @@ IMPORTANT: Hast du schon ein Lager eingerichtet und einen Lieferanten erstellt? 
 
 Nachdem du in den vorherigen Kapiteln deine Artikel angelegt und gegebenenfalls eine Schnittstelle zu eBay eingerichtet hast, schauen wir uns im Folgenden an, wie du deinen Kunden verschiedene Zahlungsmöglichkeiten anbieten und deinen Shop ansprechend gestalten kannst. Diese und andere Funktionalitäten werden in plentymarkets mit Hilfe von Plugins bereitgestellt.
 
-Zu Beginn sind in deinem System noch keine Plugins installiert. Durchlaufe den Integrations-Assistenten, um einige grundlegende Erweiterungen zu installieren. Du findest ihn im Menü *System » Assistenten*.
+Zu Beginn sind in deinem System noch keine Plugins installiert. Durchlaufe den Integrations-Assistenten, um einige grundlegende Erweiterungen zu installieren. Du findest ihn im Menü *Einrichtung » Assistenten*.
 
 Im Kontext des Schnelleinstiegs werden wir mit plentyShop LTS, den Zahlungsarten PayPal und Vorkasse sowie DHL als Versanddienstleister arbeiten. Wenn deine Bedürfnisse davon abweichen, überspringe die entsprechenden nachfolgenden Kapitel.
 
