--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -107,7 +107,7 @@ https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-V
 | * Du verwendest die Zahlungsmethode *Galaxus Direct Checkout*.
 | * Du verwendest die Zahlungsmethode *Galaxus Direct Checkout Fisc Rep*.
 * Du aktivierst die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport*.
-* Im Standort *Deutschland* speicherst du deine Umsatzsteuer-ID für die Schweiz.
+* Im Standort *Deutschland* unter *Buchhaltung » Schweiz* speicherst du deine Umsatzsteuer-ID für die Schweiz.
 
 2+^| Ablauf bei Auftragsimport
 
@@ -847,7 +847,7 @@ Damit diese Informationen auf den Rechnungen erscheinen, gehe wie unten beschrie
 [.instruction]
 Steuersätze für die Schweiz speichern:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Buchhaltung » Tab: Umsatzsteuer*.
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » Standort: Deutschland » Buchhaltung » Tab: Umsatzsteuer*.
 . Klicke auf *Neue Konfiguration*.
 . Wähle das Land *Schweiz*.
 . Gib die Umsatzsteuersätze für die Schweiz ein. +
@@ -880,7 +880,7 @@ PDF-Vorlage für Rechnungen hochladen:
 Vorlage für Rechnungen anpassen:
 
 . Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Deutschland » Dokumente » Rechnung » Tab: Vorlage*.
-. Stelle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* ein.
+. Wähle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags*.
 *_Wichtig:_* Diese Einstellung gilt für alle Rechnungen des Standorts, nicht nur für Galaxus.
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<table-delivery-notes>> beschriebenen Einstellungen vor. +
@@ -977,7 +977,7 @@ Damit diese Informationen auf den Rechnungen erscheinen, gehe wie unten beschrie
 [.instruction]
 Steuersätze für die Schweiz speichern:
 
-. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Buchhaltung » Tab: Umsatzsteuer*.
+. Öffne das Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » Standort: Deutschland » Buchhaltung » Tab: Umsatzsteuer*.
 . Klicke auf *Neue Konfiguration*.
 . Wähle das Land *Schweiz*.
 . Gib die Umsatzsteuersätze für die Schweiz ein.
@@ -1011,7 +1011,7 @@ PDF-Vorlage für Rechnungen hochladen:
 Vorlage für Rechnungen anpassen:
 
 . Öffne das Menü *Einrichtung » Mandant » [Standard-Mandanten öffnen] » Standorte » Standort: Deutschland » Dokumente » Rechnung » Tab: Vorlage*.
-. Stelle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* ein. +
+. Wähle für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags*. +
 *_Wichtig:_* Diese Einstellung gilt für alle Rechnungen des Standorts, nicht nur für Galaxus.
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<#table-invoices-fiscal-rep>> beschriebenen Einstellungen vor. +
@@ -1299,7 +1299,7 @@ include::partial$plugin-market-not-in-menu.adoc[]
 Voraussetzungen: EU-Hub mit Fiskalvertretung
 
 * Du hast im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport* die Option *Ich nutze den Galaxus EU-Hub und habe eine Fiskalvertretung in der Schweiz* aktiviert.
-* Du hast im Menü *Einrichtung » Mandant » Standard Shop » Standorte » Deutschland » Dokumente » Rechnung* für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* eingestellt. +
+* Du hast im Menü *Einrichtung » Mandant » Standard Shop » Standorte » Standort: Deutschland » Dokumente » Rechnung* für die Einstellung *Währung des Dokumentes* die Option *Währung des Auftrags* eingestellt. +
 *_Wichtig:_* Diese Einstellung gilt für alle Rechnungen des Standorts, nicht nur für Galaxus.
 * Du hast im Standort *Deutschland* deine Umsatzsteuer-ID und die Steuersätze für die Schweiz gespeichert.
 --
