--- a/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-delivery-order.adoc
@@ -6,23 +6,21 @@
 Mithilfe des Auftragstyps *Lieferauftrag* werden aus einem Hauptauftrag Lieferaufträge für die enthaltenen Auftragspositionen generiert, sodass du diese einzeln oder in Teilen verschicken kannst. So kannst du beispielsweise Artikel, die du auf Lager hast, sofort losschicken und Artikel, die du erst noch geliefert bekommst, später nachsenden. Führe dies mit unterschiedlichen oder auch nur mit einem einzelnen Versanddienstleister durch. +
 Lieferaufträge können <<manually-create-delivery-orders#, manuell>>, <<automatically-create-delivery-orders#, automatisch>> oder per <<create-delivery-orders-via-event-procedure#, Ereignisaktion>> erstellt werden.
 
-// ist das in der neuen UI noch so?
 [WARNING]
 .Alle Auftragspositionen in Lieferaufträge übernehmen
 ====
 Erstellst du Lieferaufträge aus einem Auftrag, müssen _alle_ Auftragspositionen des Hauptauftrags in Lieferaufträge überführt werden. Übernimmst du nicht alle Auftragspositionen in Lieferaufträge, kommt es zu Fehlern im Bestand und in den Lagern.
 ====
 
-[#310]
+[#characteristics-delivery-orders]
 == Merkmale von Lieferaufträgen
 
 Im Allgemeinen besitzen Lieferaufträge die folgenden Eigenschaften:
-
+//sind die Merkmale noch gültig?
 * Die Auftragspositionen eines Lieferauftrages lassen sich nach dem Erzeugen des Lieferauftrages _nicht_ mehr anpassen.
 * Der *Preis* und das *Gewicht* eines Artikels werden aus dem Hauptauftrag übernommen.
 * Die *Auftragssprache* wird aus dem Hauptauftrag übernommen.
-// noch gültig? Tab Belege in alter UI!?
-* Das *Adressetikett*, der *Lieferschein*, die *Proformarechung* und die *Gelangensbestätigung* können im Tab *Belege* eines Lieferauftrags generiert werden.
+* Die *Abhollieferung*, der *Lieferschein*, die *Proformarechung* und die *Gelangensbestätigung* können im Bereich *Dokumente* eines Lieferauftrags generiert werden.
 * Die *Rechnung* und alle weiteren Dokumente werden zentral im Hauptauftrag generiert.
 * Die *Bestandsreservierung* für die in einem Lieferauftrag enthaltene Menge wird beim Anlegen eines Lieferauftrags vom Hauptauftrag auf den Lieferauftrag übertragen.
 
@@ -33,13 +31,13 @@ Der Hauptauftrag folgt immer dem Status des Lieferauftrags mit dem niedrigsten S
 Wenn z.B. ein Auftrag in Status *5.0* zwei Lieferaufträge hat und einer dieser Lieferaufträge wechselt in den Status *6.5*, ändert sich am Status des Hauptauftrages zunächst nichts. Erst wenn der zweite Lieferauftrag ebenfalls in den Status *6.5* wechselt, wird automatisch auch der Status des Hauptauftrages zu *6.5* geändert.
 ====
 
-[#320]
+[#basic-settings-delivery-orders]
 == Grundeinstellungen für Lieferaufträge vornehmen
 
 [WARNING]
 .Lager pro Auftragsposition zuordnen
 ====
-Im Menü *Einrichtung » Aufträge » Einstellungen* muss für die xref:auftraege:grundeinstellungen.adoc#intable-warehouse-assignment[Zuordnung des Lagers] die Option *b) pro Artikelposition kann ein Lager zugeordnet werden* ausgewählt werden.
+Im Menü *Einrichtung » Aufträge » Einstellungen* muss für die xref:auftraege:preparatory-settings.adoc#intable-warehouse-assignment[Zuordnung des Lagers] die Option *b) pro Artikelposition kann ein Lager zugeordnet werden* gewählt werden.
 ====
 
 Im Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag* legst du vorab fest, nach welchem Kriterium Aufträge in Lieferaufträge gesplittet werden.
@@ -49,12 +47,12 @@ Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Auftragstypen » Lieferauftrag*.
 . Nimm die Einstellungen anhand <<table-order-types-delivery-order-options>> vor.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[table-order-types-delivery-order-options]]
 .Optionen für das *Splitten von Aufträgen in Lieferaufträge*
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 2+^| *Aufträge in Lieferaufträge splitten nach*
@@ -74,31 +72,103 @@ Optionen für das Splitten von Aufträgen in Lieferaufträge wählen:
 
 | *Lager und Netto-Warenbestand*
 |Die Lieferaufträge werden anhand der verschiedenen *Lager und des Netto-Warenbestands* der Auftragspositionen erstellt.
-|====
+|===
+
+[TIP]
+.Endpunkt nach Abschluss eines Auftrags festlegen
+====
+Im Menü unter *Einrichtung » Einstellungen » Aufträge » Auftragstypen » Auftrag [Beta]* kannst du mit der Einstellung *Endpunkt nach Abschluss eines Auftrags* definieren, welche Ansicht nach Abschluss eines Auftrags angezeigt wird.
+====
 
 [#manually-create-delivery-orders]
 == Lieferaufträge manuell anlegen
-//Hier anpassen: Auftrag öffnen, für den ein Lieferauftrag angelegt werden soll. Dann die Option "Für bestimmte Artikel" oder "Für alle Artikel" wählen?
 
 Bei Bedarf kannst du Lieferaufträge manuell über den Hauptauftrag anlegen. Bei dieser Methode wählst du für jeden Lieferauftrag einzeln die Auftragspositionen und -mengen aus, die der Lieferauftrag enthalten soll.
 
-Wir empfehlen, grundsätzlich für *alle* Auftragspositionen Lieferaufträge anzulegen. Verbleiben eine oder mehrere Auftragspositionen ohne Zuordnung zu einem Lieferauftrag im Hauptauftrag, kann es zu Fehlfunktionen kommen. Zudem darf die Menge, die du unter *LiefAufMenge* einträgst, nicht größer sein, als die unter *NZMenge* (nicht zugeordnete Menge) angezeigte Menge.
+Wir empfehlen, grundsätzlich für *alle* Auftragspositionen Lieferaufträge anzulegen. Verbleiben eine oder mehrere Auftragspositionen ohne Zuordnung zu einem Lieferauftrag im Hauptauftrag, kann es zu Fehlfunktionen kommen.
 
-//gibt es LiefAufMenge etc. noch für neue UI?
+:ordertype: Lieferaufträge
+
 [.instruction]
 Lieferaufträge manuell anlegen:
 
-. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Öffne den Auftrag, für den Lieferaufträge angelegt werden sollen.
-. Wechsle in das Tab *Lief*.
-. Trage in das Feld *LiefAufMenge* (Menge für den Lieferauftrag), die *Menge* ein, die in den Lieferauftrag überführt werden soll.
-. Klicke anschließend auf das *Lieferauftrag anlegen* (terra:execute[]). +
+. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Lieferauftrag*.
+. Wähle die Option *Für bestimmte Artikel*. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-delivery-order>>. +
+. *Speichere* (material:save[]) die Einstellungen. +
 → Der Lieferauftrag wird angelegt.
-. Wiederhole den Prozess, um weitere Lieferaufträge anzulegen.
+
+include::partial$create-order-type.adoc[]
+
+[[table-create-delivery-order]]
+.Einstellungen für Lieferaufträge
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
+
+| *Status*
+|Wähle einen Status aus der Dropdown-Liste.
+
+| *Eigner*
+|Wähle einen Eigner aus der Dropdown-Liste.
+
+2+^| *Artikelinformationen*
+
+| *Füge alle offenen Mengen in den Warenkorb*
+|Fügt alle offenen Mengen dem Warenkorb hinzu.
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Variantennummer*
+|Zeigt die Variantennummer an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Menge*
+|Zeigt die Menge des Artikels an. Passe die Menge bei Bedarf an.
+
+| *Verbleibende Stückzahl*
+|Zeigt die verbleibende Stückzahl des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Offene Menge*
+|Zeigt die offene Menge des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Verfügbarer Warenbestand*
+|Zeigt den Warenbestand an, der verfügbar ist.
+
+| *Artikelname*
+|Zeigt den Name des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
+|Fügt nur bestimmte Artikel zur Retoure hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
+*_Tipp:_* Passe die Artikelmenge bei Bedarf im Feld *Menge* an.
+
+2+^| *Warenkorb*
+
+| *Artikel aus Warenkorb entfernen* (material:delete[])
+|Leert den Warenkorb komplett. Möchtest du nur bestimmte Artikel entfernen, klicke rechts neben dem jeweiligen Artikel auf *Artikel aus Warenkorb entfernen* (material:delete[]).
+
+| *Artikel-ID*
+|Zeigt die Artikel-ID an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Varianten-ID*
+|Zeigt die Varianten-Id an. Dieses Feld kann nicht bearbeitet werden.
+
+| *Menge*
+|Zeigt die Artikelmenge an. Passe die Menge bei Bedarf an.
+
+| *Artikelname*
+|Zeigt den Artikelname an. Passe den Name bei Bedarf an.
+
+|===
 
 [#automatically-create-delivery-orders]
 == Lieferaufträge automatisch anlegen
-// wo kann ich sie in neuer UI automatisch anglegen?
 
 [IMPORTANT]
 .Bedingung für das automatische Anlegen von Lieferaufträgen
@@ -111,11 +181,12 @@ Wenn du Lieferaufträge automatisch anlegen lässt, greifen die zuvor in <<table
 [.instruction]
 Lieferaufträge automatisch anlegen:
 
-. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
-. Öffne den Auftrag, für den Lieferaufträge angelegt werden sollen.
-. Wechsle in das Tab *Lief*.
-. Klicke auf *Lieferauftrag automatisch anlegen* (icon:gear[role="darkGrey"]). +
-→ Die Lieferaufträge werden angelegt.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, für den du Lieferaufträge anlegen möchtest.
+. Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Lieferauftrag*.
+. Wähle die Option *Automatisch aufteilen*. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>. +
+→ Die Lieferaufträge werden anhand der vorgenommenen <<#basic-settings-delivery-order, Grundeinstellungen>> automatisch gesplittet und angelegt.
 
 [#create-delivery-orders-via-event-procedure]
 == Lieferaufträge per Ereignisaktion anlegen
@@ -134,7 +205,7 @@ include::_includes:partial$event-procedure.adoc[]
 [[table-event-procedure-delivery-order-when-new-order]]
 .Ereignisaktion "Lieferauftrag generieren bei Auftragseingang" einrichten
 [cols="1,3,3"]
-|====
+|===
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
@@ -153,7 +224,7 @@ include::_includes:partial$event-procedure.adoc[]
 | *Auftrag > Lieferaufträge generieren*
 |
 
-|====
+|===
 
 === Beispiel B: Ereignisaktion "Lieferauftrag generieren bei Wechsel zu Status 5" einrichten
 
@@ -167,7 +238,7 @@ include::_includes:partial$event-procedure.adoc[]
 [[table-event-procedure-delivery-order-status-5]]
 .Ereignisaktion "Lieferauftrag generieren bei Wechsel zu Status 5" einrichten
 [cols="1,3,3"]
-|====
+|===
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
@@ -186,7 +257,7 @@ include::_includes:partial$event-procedure.adoc[]
 | *Auftrag > Lieferaufträge generieren*
 |
 
-|====
+|===
 
 === Beispiel C: Ereignisaktion "Lieferauftrag generieren bei Rechnungserzeugung"
 
@@ -199,7 +270,7 @@ include::_includes:partial$event-procedure.adoc[]
 [[table-event-procedure-invoice-generated]]
 .Ereignisaktion "Lieferauftrag generieren bei Rechnungserzeugung" einrichten
 [cols="1,3,3"]
-|====
+|===
 |Einstellung |Option |Auswahl
 
 | *Ereignis*
@@ -218,9 +289,9 @@ include::_includes:partial$event-procedure.adoc[]
 | *Auftrag > Lieferaufträge generieren*
 |
 
-|====
+|===
 
-[#360]
+[#edit-delivery-orders]
 == Haupt- und Lieferaufträge bearbeiten
 
 Um den Hauptauftrag öffnen zu dürfen, müssen variable Benutzer:innen über die xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#100[Berechtigung] für alle Lager der Lieferaufträge eines Hauptauftrags verfügen. Prüfe dazu die Einstellungen im Menü *Einrichtung » Einstellungen » Benutzer » Konten » Tab: Berechtigungen*.
