--- a/docs/de-de/modules/fulfillment/pages/dokumente-erzeugen.adoc
+++ b/docs/de-de/modules/fulfillment/pages/dokumente-erzeugen.adoc
@@ -71,7 +71,7 @@ Wenn du eine Lieferanschriftenliste mit dem Datenformat UPS WorldShip 11 generie
 [#paketnummern-importieren]
 == Paketnummern importieren
 
-Neben der Möglichkeit, größere Mengen an Paketnummern komfortabel über das xref:fulfillment:dokumente-erzeugen.adoc#paketnummern-elasticsync[Import-Tool] in dein System zu importieren, kannst du dies auch xref:fulfillment:dokumente-erzeugen.adoc#paketnummern-manuell-importieren[manuell] oder mit Hilfe eines xref:fulfillment:dokumente-erzeugen.adoc#paketnummern-barcodescanner[Barcodescanners] erledigen.
+Neben der Möglichkeit, größere Mengen an Paketnummern komfortabel über das <<#paketnummern-elasticsync, Import-Tool>> in dein System zu importieren, kannst du dies auch <<#paketnummern-manuell-importieren, manuell>> oder mit Hilfe eines <<#paketnummern-barcodescanner, Barcodescanners>> erledigen.
 
 [#paketnummern-elasticsync]
 === Paketnummern über das Import-Tool importieren
@@ -118,7 +118,7 @@ Im Gegensatz zu Versandlabels kannst du für Adressetiketten in plentymarkets ge
 Das Generieren von Adressetiketten in plentymarkets ist speziell für Warensendungen vorgesehen. Wenn das Paket über einen Paketdienst versendet wird, nutze die Software dieses Paketdienstes, um Versandlabels zu drucken. plentymarkets unterstützt den Datenaustausch mit verschiedenen Paketdiensten.
 ====
 
-Wenn du bereits eine Adressetikettenvorlage erstellt und eine PDF-Vorlage gespeichert hast, fahre mit Kapitel xref:fulfillment:dokumente-erzeugen.adoc#adressetikett-erzeugen[Adressetikett erzeugen] fort.
+Wenn du bereits eine Adressetikettenvorlage erstellt und eine PDF-Vorlage gespeichert hast, fahre mit Kapitel <<#adressetikett-erzeugen, Adressetikett erzeugen>> fort.
 
 [#adressetikettenvorlage]
 === Adressetikettenvorlage erstellen
@@ -181,7 +181,7 @@ Die genauen Maße sind beim Etikettenpapier angegeben. Die Seitenränder sowie d
 |Zahlen für die Positionierung eingeben.
 
 | *Artikelauflistung*
-|Die Artikelauflistung bestimmt, wie die Artikeldaten auf dem Etikett angezeigt werden. Es gibt 2 Typen: *Standard* und *Individuell*. Eine Erläuterung zu diesen beiden Typen findest du im Kapitel xref:fulfillment:dokumente-erzeugen.adoc#artikelauflistung[Artikelauflistung].
+|Die Artikelauflistung bestimmt, wie die Artikeldaten auf dem Etikett angezeigt werden. Es gibt 2 Typen: *Standard* und *Individuell*. Eine Erläuterung zu diesen beiden Typen findest du im Kapitel <<#artikelauflistung, Artikelauflistung>>.
 
 | *Inhalt der Auftrags-ID*
 | *Auftrags-ID des Hauptauftrages* oder *Auftrags-ID des Lieferauftrages* wählen.
