fix: update pull to fetch instruction

--- a/docs/de-de/modules/plugins/partials/git-commit-wechseln.adoc
+++ b/docs/de-de/modules/plugins/partials/git-commit-wechseln.adoc
@@ -11,7 +11,7 @@ Auf Commit wechseln:
 . Öffne die Einstellungen des Git-Plugins, das du bearbeiten möchtest, indem du auf die Zeile in der Tabelle klickst. +
 → Die Plugin-Detailansicht wird geöffnet.
 . Klicke auf **Git**.
-. Klicke auf *Pull* (icon:arrow-down[role=yellow]).
+. Klicke auf *Fetch* (icon:arrow-down[role=yellow]).
 . Kopiere die Commit-ID des Commits, auf den du wechseln möchtest. +
 In der Detailansicht werden die letzten 50 Commits für den ausgewählten Branch angezeigt. Du kannst die Commit-ID kopieren, indem du in der Zeile des gewünschten Commits auf **Commit-ID in Zwischenablage kopieren.** (icon:clipboard[role=yellow]) klickst. Wenn du auf einen Commit wechseln möchtest, der mehr als 50 Commits zurückliegt, kannst du die gleichen Schritte in der Commits-Übersicht deines Git-Repositorys durchführen.
 . Füge die kopierte ID in das Feld **Commit-ID** ein.
