--- a/docs/en-gb/modules/plugins/partials/git-commit-wechseln-en_gb.adoc
+++ b/docs/en-gb/modules/plugins/partials/git-commit-wechseln-en_gb.adoc
@@ -11,7 +11,7 @@ Switching commits:
 . Open the settings of the Git plugin you want to edit by clicking on the table row. +
 → The plugin detail view for the selected plugin opens.
 . Click on **Git**.
-. Click on *Pull* (icon:arrow-down[role=yellow]).
+. Click on *Fetch* (icon:arrow-down[role=yellow]).
 . Copy the commit ID of the commit you want to switch to. +
 The last 50 commits of the selected branch are displayed in the detail view. You can copy a commit ID by clicking on **Copy commit ID to clipboard.** (icon:clipboard[role=yellow]) in the row of the commit. If you want to switch to an older commit, you can perform the same steps in the commit overview of your Git repository.
 . Paste the copied ID into the **Commit ID** field.
