--- a/docs/de-de/modules/plugins/partials/chapter-git-plugins-aktualisieren.adoc
+++ b/docs/de-de/modules/plugins/partials/chapter-git-plugins-aktualisieren.adoc
@@ -8,12 +8,28 @@ Git-Plugins können auf unterschiedliche Arten aktualisiert werden. Um mit einer
 
 Wenn in deinem Git-Repository ein neuerer Stand deines Plugins vorliegt und du diesen Stand in plentymarkets verwenden möchtest, kannst du den Branch pullen.
 
+[NOTE]
+.Entfernt in Plugin Build 2
+====
+Ab dem 25. Juli 2022 wird ein neuer Bereitstellungsprozess (Plugin Build 2) schrittweise auf allen plentymakets Systemen veröffentlicht. Wenn ein Git-Plugin über einen Branch installiert wurde, wird das Plugin beim Bereitstellen automatisch auf den neusten Stand aktualisiert.
+
+Sobald dein System auf Plugin Build 2 umgestellt ist, werden Aktionen zum Pullen von Branches aus der UI entfernt.
+====
+
 include::partial$git-branch-pullen.adoc[]
 
 [#branch-wechseln]
 == Auf Branch wechseln
 
 Du kannst zwischen den Branches eines Git-Repositorys wechseln. Bei der Auswahl des Branches handelt es sich um eine lokale Einstellungen. Das heißt, es kann für dasselbe Plugin in jedem Set ein anderer Branch ausgewählt werden. Somit kannst du beispielsweise den stabilen Branch in deinem aktiven Plugin-Set verwenden und gleichzeitig in einem inaktiven Set auf einem anderen Branch ein neues Feature testen.
+
+[WARNING]
+.Automatischer Pull in Plugin Build 2
+====
+Ab dem 25. Juli 2022 wird ein neuer Bereitstellungsprozess (Plugin Build 2) schrittweise auf allen plentymakets Systemen veröffentlicht. Wenn ein Git-Plugin über einen Branch installiert wurde, wird das Plugin beim Bereitstellen automatisch auf den neusten Stand aktualisiert.
+
+Sobald dein System auf Plugin Build 2 umgestellt ist, wirst du beim ersten Bereitstellen eines Plugin-Sets, das Git-Plugins enthält, über die Änderungen informiert. Wenn du verhindern möchtest, dass der Stand eines Git-Plugins automatisch aktualisiert wird, <<commit-wechseln, wechsle stattdessen zu einem Commit>>.
+====
 
 include::partial$git-branch-wechseln.adoc[]
 
