ADJUST order types

--- a/docs/de-de/modules/auftraege/pages/order-type-return.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-return.adoc
@@ -80,29 +80,29 @@ Wählst du hier einen Grund, hat dieser Grund Priorität gegenüber den einzeln 
 
 2+^| *Artikelinformationen*
 
-| *Füge alle offenen Mengen in den Warenkorb*
+| *Füge alle offenen Mengen in den Warenkorb* (material:playlist_add[])
 |Fügt alle offenen Mengen dem Warenkorb hinzu.
 
 | *Artikel-ID*
-|Zeigt die Artikel-ID an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Artikel-ID an.
 
 | *Varianten-ID*
-|Zeigt die Varianten-ID an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Varianten-ID an.
 
 | *Variantennummer*
-|Zeigt die Variantennummer an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Variantennummer an.
 
 | *Menge*
 |Zeigt die Menge des Artikels an. Passe die Menge bei Bedarf an.
 
 | *Verbleibende Stückzahl*
-|Zeigt die verbleibende Stückzahl des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die verbleibende Stückzahl des Artikels an.
 
 | *Offene Menge*
-|Zeigt die offene Menge des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die offene Menge des Artikels an.
 
 | *Artikelname*
-|Zeigt den Name des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt den Name des Artikels an.
 
 | *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
 |Fügt nur bestimmte Artikel zur Retoure hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
@@ -111,13 +111,13 @@ Wählst du hier einen Grund, hat dieser Grund Priorität gegenüber den einzeln 
 2+^| *Warenkorb*
 
 | *Artikel aus Warenkorb entfernen* (material:delete[])
-|Leert den Warenkorb komplett zu leeren. Möchtest du nur bestimmte Artikel entfernen, klicke rechts neben dem jeweiligen Artikel auf *Artikel aus Warenkorb entfernen* (material:delete[]).
+|Leert den Warenkorb komplett. Möchtest du nur bestimmte Artikel entfernen, klicke rechts neben dem jeweiligen Artikel auf *Artikel aus Warenkorb entfernen* (material:delete[]).
 
 | *Artikel-ID*
-|Zeigt die Artikel-ID an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Artikel-ID an.
 
 | *Varianten-ID*
-|Zeigt die Varianten-Id an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Varianten-ID an.
 
 | *Menge*
 |Zeigt die Artikelmenge an. Passe die Menge bei Bedarf an.
