--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -16,7 +16,7 @@ Bevor du eine Gutschrift anlegst, prüfe den xref:auftraege:preparatory-settings
 Eine Gutschrift ist immer mit einem bestehenden Auftrag in deinem plentymarkets System verknüpft. Deshalb musst du den gewünschten Auftrag zunächst in der Auftragsübersicht öffnen, bevor du eine Gutschrift anlegen kannst.
 
 [TIP]
-.Gutschriften im Hauptauftrag oder im Retourenauftrag anlegen
+.Gutschriften im Hauptauftrag oder im Kindauftrag anlegen
 ====
 Hat eine Kund:in den Auftrag bereits gezahlt, beispielsweise per Vorkasse, und entscheidet sich vor dem Warenausgang gegen den Kauf, empfehlen wir, den Auftrag zu stornieren und direkt im Hauptauftrag eine Gutschrift über alle Auftragspositionen anzulegen.
 
@@ -29,8 +29,8 @@ Kommt es nach erfolgter Zahlung, Warenausgang und Zustellung der Ware für eine 
 Gutschriftauftrag anlegen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
-. Suche (material:search[]) den Auftrag, zu dem du eine Gutschrift anlegen möchtest.
-. Öffne den Auftrag.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, zu dem du eine Gutschrift anlegen möchtest.
 . Klicke oben auf *Aufträge erstellen* (material:shopping_cart[]) > *Gutschrift*.
 . Wähle eine Option. Beachte dazu die Erläuterungen in <<table-create-{ordertype}>>.
 . Wählst du die Option *Für bestimmte Artikel*, nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-credit-note>>.
@@ -56,29 +56,29 @@ include::partial$create-order-type.adoc[]
 
 2+^| *Artikelinformationen*
 
-| *Füge alle offenen Mengen in den Warenkorb*
+| *Füge alle offenen Mengen in den Warenkorb* (material:playlist_add[])
 |Fügt alle offenen Mengen dem Warenkorb hinzu.
 
 | *Artikel-ID*
-|Zeigt die Artikel-ID an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Artikel-ID an.
 
 | *Varianten-ID*
-|Zeigt die Varianten-ID an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Varianten-ID an.
 
 | *Variantennummer*
-|Zeigt die Variantennummer an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Variantennummer an.
 
 | *Menge*
 |Zeigt die Menge des Artikels an. Passe die Menge bei Bedarf an.
 
 | *Verbleibende Stückzahl*
-|Zeigt die verbleibende Stückzahl des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die verbleibende Stückzahl des Artikels an.
 
 | *Offene Menge*
-|Zeigt die offene Menge des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die offene Menge des Artikels an.
 
 | *Artikelname*
-|Zeigt den Name des Artikels an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt den Name des Artikels an.
 
 | *Zum Warenkorb hinzufügen* (material:add_shopping_cart[])
 |Fügt nur bestimmte Artikel zur Retoure hinzu. Diese Schaltfläche ist nur verfügbar, wenn mindestens 1 Artikel vorhanden ist. +
@@ -90,10 +90,10 @@ include::partial$create-order-type.adoc[]
 |Leert den Warenkorb komplett. Möchtest du nur bestimmte Artikel entfernen, klicke rechts neben dem jeweiligen Artikel auf *Artikel aus Warenkorb entfernen* (material:delete[]).
 
 | *Artikel-ID*
-|Zeigt die Artikel-ID an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Artikel-ID an.
 
 | *Varianten-ID*
-|Zeigt die Varianten-Id an. Dieses Feld kann nicht bearbeitet werden.
+|Zeigt die Varianten-Id an.
 
 | *Menge*
 |Zeigt die Artikelmenge an. Passe die Menge bei Bedarf an.
@@ -103,49 +103,59 @@ include::partial$create-order-type.adoc[]
 
 |===
 
-// auf neue UI anpassen - kann gelöscht werden?
-Wenn bereits ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
-
-[#530]
-== Gutschriftbeleg erstellen
+[#create-document-credit-note]
+== Dokument Gutschrift erstellen
 // noch notwendig?
-Nach dem Anlegen des Gutschriftauftrags muss ein Gutschriftbeleg direkt im Gutschriftauftrag erstellt werden. Vor dem ersten Erzeugen eines xref:auftraege:gutschriften-erzeugen.adoc#[Gutschriftbelegs], muss die Dokumentenvorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Gutschrift* eingerichtet werden.
+Nach dem Anlegen des Gutschriftauftrags muss das Dokument *Gutschrift* direkt im Gutschriftauftrag erstellt werden. Vor dem ersten Erzeugen dieses Dokuments, muss die Dokumentenvorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Gutschrift* eingerichtet werden.
 
-// Tab Belege anpassen auf neue UI?
-Bevor du den Gutschriftbeleg im Tab *Belege* des Gutschriftauftrags erzeugst, solltest du die im Gutschriftauftrag enthaltenen Auftragspositionen prüfen und bei Bedarf ändern.
+Bevor du aber das Dokument im Gutschriftauftrag erzeugst, solltest du die im Gutschriftauftrag enthaltenen Auftragspositionen prüfen und bei Bedarf anpassen.
 
 // auf neue UI anpassen
 [.instruction]
-Gutschriftbeleg erstellen:
+Dokument *Gutschrift* erstellen:
 
-. Öffne den Gutschriftauftrag, für den ein Gutschriftbeleg erzeugt werden soll.
-. Wähle die Option *Gutschrift* aus der Dropdown-Liste unter *Beleg / erstellen*.
-. Klicke auf *Beleg erstellen*. +
-→ Der Gutschriftbeleg wird erzeugt und in einem eigenen Tab geöffnet.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Gutschriftauftrag, für den das Dokument *Gutschrift* erzeugt werden soll.
+. Gehe in den Bereich *Dokumente*.
+. Klicke rechts auf *Dokument erstellen* (material:add_note[]).
+. Wähle die Option *Gutschrift*. +
+→ Das Fenster zum Erstellen des Dokuments wird geöffnet.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-create-document-credit-note>>.
+→ Der Gutschriftbeleg wird erzeugt.
 
-Erstellte Gutschriften weisen jeweils eine Referenz zu der Rechnung des dazugehörigen Auftrages auf. Im Tab *Dokumente* eines Auftrags wird dies in der Benennung der Gutschrift angezeigt.
+[#correct-and-cancel-credit-note-document]
+== Dokument Gutschrift korrigieren und stornieren
 
-[#540]
-== Gutschriftbeleg korrigieren und stornieren
-
-Einen Gutschriftauftrag und den dazugehörigen Gutschriftbeleg korrigierst du, indem du zunächst einen *Stornobeleg Gutschrift* erzeugst. Danach ist der Gutschriftauftrag auch wieder entsperrt. Denn nach dem Erstellen eines Gutschriftbelegs ist der Gutschriftauftrag selbst für die Bearbeitung gesperrt, damit steuerrelevante Daten nicht verändert werden können. Anschließend kann der Gutschriftauftrag wieder bearbeitet werden. Du kannst die Daten korrigieren und einen neuen Gutschriftbeleg erstellen.
+Einen Gutschriftauftrag und das dazugehörige Dokument korrigierst du, indem du zunächst einen *Stornobeleg Gutschrift* erzeugst. Danach ist der Gutschriftauftrag auch wieder entsperrt. Denn nach dem Erstellen eines Gutschriftdokuments ist der Gutschriftauftrag selbst für die Bearbeitung gesperrt, damit steuerrelevante Daten nicht verändert werden können. Anschließend kann der Gutschriftauftrag wieder bearbeitet werden. Du kannst die Daten korrigieren und ein neues Dokument für die Gutschrift erstellen.
 
 Vor dem ersten Erzeugen des Dokuments muss im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Stornobeleg Gutschrift* zunächst die xref:auftraege:auftragsdokumente.adoc#300[Vorlage] für das Dokument *Stornobeleg Gutschrift* eingerichtet werden.
 
 [IMPORTANT]
-.Stornieren eines Gutschriftbelegs
+.Stornieren eines Gutschriftdokuments
 ====
-Das Stornieren eines Gutschriftbelegs dient der nachvollziehbaren Korrektur von steuerrelevanten Daten und *nicht* der Stornierung eines Gutschriftauftrags selbst.
+Das Stornieren eines Gutschriftdokuments dient der nachvollziehbaren Korrektur von steuerrelevanten Daten und *nicht* der Stornierung eines Gutschriftauftrags selbst.
 ====
 
 Gehe zur Korrektur eines Gutschriftauftrags und der Erstellung eines *Stornobelegs Gutschrift* wie im Folgenden beschrieben vor.
 
-// auf neue UI anpassen
+// adjust add_note icon to add once the changes are merged
+//can we rename Gutschrift into Gutschriftbeleg? Otherwhise this is really confusing...
 [.instruction]
 Gutschriftauftrag korrigieren:
 
-. Öffne das Menü *Aufträge » Aufträge bearbeiten*.
-. Öffne den Auftrag, in dem du den Gutschriftbeleg stornieren möchtest.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Öffne den Auftrag, in dem du das Gutschriftdokument stornieren möchtest.
+. Klicke im Bereich *Dokumente* auf *Dokument erstellen* (material:add_note[]).
+. Wähle die Option *Stornobeleg Gutschrift*. +
+*_Hinweis:_* Diese Option ist nur verfügbar, wenn bereits ein Gutschriftdokument erstellt wurde.
+. Nimm die Einstellungen vor.
+. Klicke anschließend auf *Ausführen*. +
+→ Der Stornobeleg wird erzeugt und die Auftragseinstellungen des Guschriftauftrags entsperrt.
+. Bearbeite die Daten, die du korrigieren möchtest.
+//HIER WEITER
+
 . Wechsle in das Tab *Belege*.
 . Wähle aus der Dropdown-Liste *Beleg erstellen* den *Stornobeleg*. +
 → Ein Fenster mit optionalen Einstellungen öffnet sich.
@@ -197,8 +207,8 @@ Rückzahlung im Tab *Zahlung* buchen:
 → Die Rückzahlung wird gebucht und wird im Tab *Zahlung* angezeigt.
 
 // anpassen
-[#560]
-== Warenbestand zurückbuchen
+[#book-back-items]
+== Waren zurückbuchen
 
 Wenn der Warenausgang bereits gebucht wurde und die Waren beispielsweise im Rahmen einer xref:auftraege:auftraege-verwalten.adoc#400[Retoure] wieder in das Lager zurückgebucht werden sollen, wird dies im Tab *Einstellungen* des Gutschriftauftrags vorgenommen.
 
