change wording / add chapter on export to Google sheets DE

--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -399,7 +399,7 @@ Daten aus Kacheln einsehen oder exportieren:
 
 | *In Google Tabellen exportieren*
 | Nutze diese Option, um die Daten der Kachel in eine Google Tabelle zu exportieren. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib eine *Zielzelle* an, um die Zelle der Tabelle festzulegen, die als Startpunkt für die resultierende Datentabelle gelten soll Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 |====
@@ -613,7 +613,7 @@ Daten aus Tabellen einsehen und exportieren:
 
 | *In Google Tabellen exportieren*
 | Über diese Option kannst du die Daten der Tabelle in eine Google Tabelle übertragen. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib eine *Zielzelle* an, um die Zelle der Tabelle festzulegen, die als Startpunkt für die resultierende Datentabelle gelten soll Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 |====
 
@@ -700,7 +700,7 @@ Daten aus kombinierten Tabellen einsehen und exportieren:
 
 | *In Google Tabellen exportieren*
 | Über diese Option kannst du die Daten der Tabelle in eine Google Tabelle übertragen. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib eine *Zielzelle* an, um die Zelle der Tabelle festzulegen, die als Startpunkt für die resultierende Datentabelle gelten soll Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 |====
 
@@ -1133,7 +1133,7 @@ Daten aus Diagrammen einsehen und exportieren:
 | *Daten speichern*
 | Lädt die aktuell angezeigten Daten des Diagramms herunter. Wähle aus den Optionen *CSV* und *JSON*, um das Dateiformat festzulegen. +
 Über die Option *In Google Tabellen exportieren* kannst du die Daten des Diagramms in eine Google Tabelle übertragen. +
-*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib auch eine *Zielzelle* an, um den Bereich der Tabelle festzulegen, der als Startpunkt für die resultierende Datentabelle gelten soll. Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
+*_Wichtig:_* Um diese Funktion nutzen zu können, musst du über ein Google-Konto verfügen und im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] bereits eine leere Tabelle angelegt haben. Wähle nach dem Klick auf die Option *In Google Tabellen exportieren* aus, welche Inhalte des Dashboards exportiert werden sollen. Im nächsten Schritt gibst du die URL zur Google Tabelle ein. Gib eine *Zielzelle* an, um die Zelle der Tabelle festzulegen, die als Startpunkt für die resultierende Datentabelle gelten soll Du wirst nach dieser Eingabe aufgefordert, dich mit einem Google-Konto anzumelden, bevor der Export gestartet werden kann. +
 *_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
 
 | *Filter ändern*
@@ -1354,6 +1354,41 @@ Globale Filter bieten dir die Möglichkeit, die Daten in allen Diagrammen, Tabel
 .Optionen zur Anpassung des Zeitintervalls
 [[image-global-filter-time-interval]]
 image::business-entscheidungen:globale-filter-zeitintervall.png[width=640, height=360]
+
+[#870]
+=== Daten in Google Tabellen exportieren
+
+In den vorherigen Kapiteln wurde bereits beschrieben, wie du Daten aus einzelnen <<#520, Kacheln>>, <<#602, Tabellen>>, <<#660, kombinierten Tabellen>> und <<#750, Diagrammen>> in Google Tabellen exportieren kannst. 
+
+Zusätzlich kannst du die Daten mehrerer oder bei Bedarf aller Elemente einer Dashboard-Ansicht gleichzeitig in eine Google Tabelle exportieren. Gehe dazu wie unten beschrieben vor.
+
+[IMPORTANT]
+.Voraussetzungen beachten
+====
+Stelle sicher, dass die folgenden Voraussetzungen erfüllt sind, *bevor* du die Funktion nutzt.
+
+* Du musst über ein Google-Konto verfügen und darin eingeloggt sein. Dies kann ein privates Konto sein oder ein Konto, das dir über deine Organisation zur Verfügung gestellt wird.
+
+* Im link:https://www.google.com/sheets/about/[Google Tabellen-Tool^] muss das Dokument, in das die Daten exportiert werden sollen, bereits erstellt sein. Erstelle also eine leere Tabelle, die anschließend mit Daten befüllt werden kann.
+====
+
+[.instruction]
+Daten in Google Tabellen exportieren:
+
+. Öffne das Menü *plentymarkets Logo (Start) » Dashboard*.
+. Öffne die Dashboard-Ansicht, aus der du Daten exportieren möchtest.
+. Bewege den Mauszeiger über eine beliebige Kachel, Tabelle, kombinierte Tabelle oder ein Diagramm.
+. Klicke auf *Aktionen* (material:more_vert[]). +
+→ Das Kontextmenü wird geöffnet.
+. Wähle die Option *In Google Tabellen exportieren*. +
+→ Ein neues Fenster öffnet sich.
+. Wähle (icon:check-square[role="blue"]) die Elemente, deren Daten du exportieren möchtest. Aktiviere die Option *Gesamtes Dashboard*, um alle Daten der Dashboard-Ansicht zu exportieren.
+. Klicke auf *Nächste*.
+. Gib die URL zur Google Tabelle ein, die du zuvor erstellt hast.
+. Gib eine *Zielzelle* an, um die Zelle der Tabelle festzulegen, die als Startpunkt für die resultierende Datentabelle gelten soll. + 
+*_Beispiel:_* Mit der Eingabe `A1` startet der Export in der linken oberen Ecke der Google Tabelle.
+. Klicke auf *Anmeldung mit Google*. +
+→ Wähle dein Google-Konto aus und gewähre plentymarkets Zugriff auf deine Google Tabelle. Anschließend werden die Daten in die Tabelle exportiert.
 
 [#900]
 === Benachrichtigungen anzeigen
