ADD options label generation

--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1870,6 +1870,12 @@ Einstellungen
 |====
 |Einstellung |Erläuterung
 
+| *Etiketten generieren*
+|Wähle eine Option zum Generieren von Etiketten: +
+*Etiketten immer generieren*: Neue Etiketten werden registriert und sowohl vorhandene als auch neue Etiketten werden gedruckt oder gespeichert. +
+*Etiketten generieren wenn keine existieren*: Existieren bereits Etiketten, werden diese gedruckt oder gespeichert. Sind keine Etiketten vorhanden, werden neue Etiketten registriert und gedruckt oder gespeichert. +
+*Bestehende Etiketten verwenden*: Nur vorhandene Etiketten werden gedruckt oder gespeichert. Existieren keine Etiketten, wird eine entsprechende Fehlermeldung angezeigt.
+
 | **Retourentyp**
 |Die Optionen *DHL Retoure Beileger* und *DHL Retoure Online* stehen standardmäßig zur Verfügung. +
 **DHL Retoure Beileger** = Erzeugt Retourenetiketten, die dem Paket bei Versand beigelegt werden. +
