--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1870,6 +1870,12 @@ Settings
 |====
 |Setting |Explanation
 
+| *Generate labels*
+|Select one of the options to generate labels: +
+*Always generate labels*: New labels are registered and both existing as well as new labels are printed or saved. +
+*Generate labels if none exist*: If labels already exist, these labels will be printed or saved. If no labels exist, new labels will be registered and printed or saved. +
+*Use existing labels*: Only existing labels are printed or saved. If no labels exist, an error message is shown.
+
 | **Return type**
 |The options *DHL Retoure enclosed return labels* and *DHL Retoure Online* are available by default. +
 **DHL Retoure enclosed return labels** = Generates return labels that you enclose in the package that you send. +
